agents are working

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "2beca7a3",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "3fc9e167",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'role': 'assistant', 'type': 'code', 'format': 'python', 'content': 'import pyautogui\\nimport time\\n\\n# Wait for a short moment to let user focus the browser\\nprint(\"Switch to your browser window in the next 3 seconds...\")\\ntime.sleep(3)\\n\\n# Press Ctrl+T (Windows and Linux)\\npyautogui.hotkey(\\'ctrl\\', \\'t\\')\\nprint(\\'Pressed Ctrl+T to open a new tab.\\')'}, {'role': 'computer', 'type': 'console', 'format': 'output', 'content': 'Switch to your browser window in the next 3 seconds...\\nPressed Ctrl+T to open a new tab.\\n'}, {'role': 'assistant', 'type': 'message', 'content': 'The Ctrl+T hotkey has been sent using pyautogui. If your browser window was in focus, you should see a new tab opened now.\\n\\nLet me know if you need to automate any other tasks!'}]\n"
+      "[{'role': 'assistant', 'type': 'code', 'format': 'python', 'content': \"import pyautogui\\nimport time\\n\\ntime.sleep(2)  # Give you 2 seconds to focus the browser\\npyautogui.hotkey('ctrl', 't')\"}, {'role': 'computer', 'type': 'console', 'format': 'output', 'content': ''}, {'role': 'assistant', 'type': 'message', 'content': 'I have simulated the Ctrl + T keyboard shortcut using pyautogui. If your browser window was focused, this should have opened a new tab.\\n\\nIf you want to automate more browser actions or control a different application, let me know your goal!'}]\n"
      ]
     }
    ],
@@ -76,148 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "c1932be1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33muser\u001b[0m (to azure_agent):\n",
-      "\n",
-      "Write a Python function that sorts a list of numbers.\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33mazure_agent\u001b[0m (to user):\n",
-      "\n",
-      "Plan:\n",
-      "- I'll write a Python function named sort_numbers that takes a list of numbers as its argument and returns a sorted version of the list in ascending order.\n",
-      "- I'll use Python's built-in sorted() function for simplicity and reliability.\n",
-      "- I'll output this code so you can execute it and verify.\n",
-      "\n",
-      "Here's the code:\n",
-      "\n",
-      "```python\n",
-      "def sort_numbers(numbers):\n",
-      "    \"\"\"\n",
-      "    Sorts a list of numbers in ascending order.\n",
-      "\n",
-      "    :param numbers: List of numeric values (int or float)\n",
-      "    :return: Sorted list of numbers\n",
-      "    \"\"\"\n",
-      "    return sorted(numbers)\n",
-      "\n",
-      "# Example usage\n",
-      "numbers = [5, 2, 9, 1, 5, 6]\n",
-      "sorted_numbers = sort_numbers(numbers)\n",
-      "print(\"Sorted numbers:\", sorted_numbers)\n",
-      "```\n",
-      "\n",
-      "Please execute the code to see the sorted list. Let me know if you'd like to sort in descending order or have more requirements! TERMINATE\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> NO HUMAN INPUT RECEIVED.\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> EXECUTING CODE BLOCK 0 (inferred language is python)...\u001b[0m\n",
-      "\u001b[33muser\u001b[0m (to azure_agent):\n",
-      "\n",
-      "exitcode: 0 (execution succeeded)\n",
-      "Code output: \n",
-      "Sorted numbers: [1, 2, 5, 5, 6, 9]\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33mazure_agent\u001b[0m (to user):\n",
-      "\n",
-      "The function sorted your list correctly in ascending order: [1, 2, 5, 5, 6, 9].  \n",
-      "If you need any customization (such as sorting in descending order), just ask!\n",
-      "\n",
-      "TERMINATE\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> NO HUMAN INPUT RECEIVED.\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33muser\u001b[0m (to azure_agent):\n",
-      "\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33mazure_agent\u001b[0m (to user):\n",
-      "\n",
-      "It seems your last message was empty. Please let me know if you have another task or question!\n",
-      "\n",
-      "TERMINATE\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> NO HUMAN INPUT RECEIVED.\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33muser\u001b[0m (to azure_agent):\n",
-      "\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33mazure_agent\u001b[0m (to user):\n",
-      "\n",
-      "It looks like your message was empty again. If you have a new task or question, please provide details and I'll help!\n",
-      "\n",
-      "TERMINATE\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> NO HUMAN INPUT RECEIVED.\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33muser\u001b[0m (to azure_agent):\n",
-      "\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33mazure_agent\u001b[0m (to user):\n",
-      "\n",
-      "It appears your message is empty. If you have a task or question, please provide the details and I'll assist you!\n",
-      "\n",
-      "TERMINATE\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> NO HUMAN INPUT RECEIVED.\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33muser\u001b[0m (to azure_agent):\n",
-      "\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33mazure_agent\u001b[0m (to user):\n",
-      "\n",
-      "It looks like your message is blank. If you have a request or question, please type it out and I’ll help you as soon as possible!\n",
-      "\n",
-      "TERMINATE\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> TERMINATING RUN (4d339ae9-8fc5-42a8-9442-b3a52d39ba56): User requested to end the conversation\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ChatResult(chat_id=126235860762959170183215105791882409728, chat_history=[{'content': 'Write a Python function that sorts a list of numbers.', 'role': 'assistant', 'name': 'user'}, {'content': 'Plan:\\n- I\\'ll write a Python function named sort_numbers that takes a list of numbers as its argument and returns a sorted version of the list in ascending order.\\n- I\\'ll use Python\\'s built-in sorted() function for simplicity and reliability.\\n- I\\'ll output this code so you can execute it and verify.\\n\\nHere\\'s the code:\\n\\n```python\\ndef sort_numbers(numbers):\\n    \"\"\"\\n    Sorts a list of numbers in ascending order.\\n\\n    :param numbers: List of numeric values (int or float)\\n    :return: Sorted list of numbers\\n    \"\"\"\\n    return sorted(numbers)\\n\\n# Example usage\\nnumbers = [5, 2, 9, 1, 5, 6]\\nsorted_numbers = sort_numbers(numbers)\\nprint(\"Sorted numbers:\", sorted_numbers)\\n```\\n\\nPlease execute the code to see the sorted list. Let me know if you\\'d like to sort in descending order or have more requirements! TERMINATE', 'role': 'user', 'name': 'azure_agent'}, {'content': 'exitcode: 0 (execution succeeded)\\nCode output: \\nSorted numbers: [1, 2, 5, 5, 6, 9]\\n', 'role': 'assistant', 'name': 'user'}, {'content': 'The function sorted your list correctly in ascending order: [1, 2, 5, 5, 6, 9].  \\nIf you need any customization (such as sorting in descending order), just ask!\\n\\nTERMINATE', 'role': 'user', 'name': 'azure_agent'}, {'content': '', 'role': 'assistant', 'name': 'user'}, {'content': 'It seems your last message was empty. Please let me know if you have another task or question!\\n\\nTERMINATE', 'role': 'user', 'name': 'azure_agent'}, {'content': '', 'role': 'assistant', 'name': 'user'}, {'content': \"It looks like your message was empty again. If you have a new task or question, please provide details and I'll help!\\n\\nTERMINATE\", 'role': 'user', 'name': 'azure_agent'}, {'content': '', 'role': 'assistant', 'name': 'user'}, {'content': \"It appears your message is empty. If you have a task or question, please provide the details and I'll assist you!\\n\\nTERMINATE\", 'role': 'user', 'name': 'azure_agent'}, {'content': '', 'role': 'assistant', 'name': 'user'}, {'content': 'It looks like your message is blank. If you have a request or question, please type it out and I’ll help you as soon as possible!\\n\\nTERMINATE', 'role': 'user', 'name': 'azure_agent'}], summary='It looks like your message is blank. If you have a request or question, please type it out and I’ll help you as soon as possible!\\n\\n', cost={'usage_including_cached_inference': {'total_cost': 0.011732, 'gpt-4.1-2025-04-14': {'cost': 0.011732, 'prompt_tokens': 4470, 'completion_tokens': 349, 'total_tokens': 4819}}, 'usage_excluding_cached_inference': {'total_cost': 0.011732, 'gpt-4.1-2025-04-14': {'cost': 0.011732, 'prompt_tokens': 4470, 'completion_tokens': 349, 'total_tokens': 4819}}}, human_input=['', '', '', '', '', 'exit'])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from autogen import AssistantAgent, UserProxyAgent\n",
@@ -232,22 +94,127 @@
     "}\n",
     "\n",
     "# Create an assistant agent using Azure\n",
-    "assistant = AssistantAgent(\n",
-    "    name=\"azure_agent\",\n",
-    "    llm_config=azure_config,\n",
-    ")\n",
+    "# assistant = AssistantAgent(\n",
+    "#     name=\"azure_agent\",\n",
+    "#     llm_config=azure_config,\n",
+    "# )\n",
     "\n",
-    "# Create a user proxy agent\n",
-    "user = UserProxyAgent(name=\"user\", code_execution_config={\"use_docker\": False})\n",
+    "# # Create a user proxy agent\n",
+    "# user = UserProxyAgent(name=\"user\", code_execution_config={\"use_docker\": False})\n",
     "\n",
-    "# Start a conversation\n",
-    "user.initiate_chat(assistant, message=\"Write a Python function that sorts a list of numbers.\")"
+    "# # Start a conversation\n",
+    "# user.initiate_chat(assistant, message=\"Write a Python function that sorts a list of numbers.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "40122de7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mExecutor\u001b[0m (to chat_manager):\n",
+      "\n",
+      "Create a python script that find fibonacci numbers recursively and print the result.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[32m\n",
+      "Next speaker: Coder\n",
+      "\u001b[0m\n",
+      "\u001b[33mCoder\u001b[0m (to chat_manager):\n",
+      "\n",
+      "Certainly! Below is a Python script that finds the n-th Fibonacci number recursively and prints the result. It also includes a main section that prompts the user for input:\n",
+      "\n",
+      "```python\n",
+      "def fibonacci(n):\n",
+      "    \"\"\"Return the nth Fibonacci number using recursion.\"\"\"\n",
+      "    if n <= 0:\n",
+      "        return 0\n",
+      "    elif n == 1:\n",
+      "        return 1\n",
+      "    else:\n",
+      "        return fibonacci(n-1) + fibonacci(n-2)\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    n = int(input(\"Enter the position (n) for Fibonacci number: \"))\n",
+      "    result = fibonacci(n)\n",
+      "    print(f\"Fibonacci number at position {n} is: {result}\")\n",
+      "```\n",
+      "\n",
+      "**Usage Example**:\n",
+      "```\n",
+      "Enter the position (n) for Fibonacci number: 7\n",
+      "Fibonacci number at position 7 is: 13\n",
+      "```\n",
+      "\n",
+      "**Notes**:\n",
+      "- The sequence is: 0, 1, 1, 2, 3, 5, 8, 13, ...\n",
+      "- The recursion in this implementation is simple but not efficient for large values of n. For large `n`, a memoization approach is recommended.\n",
+      "- The function returns `0` for n <= 0 as per a common convention; modify this logic if you need a different Fibonacci base case.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\u001b[32m\n",
+      "Next speaker: Executor\n",
+      "\u001b[0m\n",
+      "\u001b[31m\n",
+      ">>>>>>>> EXECUTING CODE BLOCK 0 (inferred language is python)...\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from autogen import AssistantAgent, UserProxyAgent, GroupChat, GroupChatManager\n",
+    "\n",
+    "# Create specialized agents\n",
+    "planner = AssistantAgent(\n",
+    "    name=\"Planner\",\n",
+    "    system_message=\"You are a planning assistant. Create step-by-step plans for complex tasks.\",\n",
+    "    llm_config=azure_config\n",
+    ")\n",
+    "\n",
+    "coder = AssistantAgent(\n",
+    "    name=\"Coder\", \n",
+    "    system_message=\"You are a Python coding expert. Write and debug code based on plans.\",\n",
+    "    llm_config= azure_config\n",
+    ")\n",
+    "\n",
+    "executor = UserProxyAgent(\n",
+    "    name=\"Executor\",\n",
+    "    system_message=\"You execute code and report results.\",\n",
+    "    human_input_mode=\"NEVER\",\n",
+    "    code_execution_config={\"use_docker\": False}\n",
+    ")\n",
+    "\n",
+    "# Create and manage group chat\n",
+    "groupchat = GroupChat(\n",
+    "    agents=[planner, coder, executor], \n",
+    "    messages=[], \n",
+    "    max_round=6\n",
+    ")\n",
+    "\n",
+    "manager = GroupChatManager(groupchat=groupchat, llm_config=azure_config)\n",
+    "\n",
+    "# Start the collaborative task\n",
+    "executor.initiate_chat(\n",
+    "    manager,\n",
+    "    message=\"Create a python script that find fibonacci numbers recursively and print the result.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16185c8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21dc58c0",
    "metadata": {},
    "outputs": [],
    "source": []
