--- a/sample.ipynb
+++ b/sample.ipynb
@@ -13,37 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3fc9e167",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">c:\\Users\\sathish\\miniconda3\\envs\\py3.10\\lib\\site-packages\\rich\\live.py:231: UserWarning: install \"ipywidgets\" for \n",
-       "Jupyter support\n",
-       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "c:\\Users\\sathish\\miniconda3\\envs\\py3.10\\lib\\site-packages\\rich\\live.py:231: UserWarning: install \"ipywidgets\" for \n",
-       "Jupyter support\n",
-       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -58,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'role': 'assistant', 'type': 'code', 'format': 'python', 'content': \"import pyautogui\\nimport time\\n\\ntime.sleep(2)  # Give you 2 seconds to focus the browser\\npyautogui.hotkey('ctrl', 't')\"}, {'role': 'computer', 'type': 'console', 'format': 'output', 'content': ''}, {'role': 'assistant', 'type': 'message', 'content': 'I have simulated the Ctrl + T keyboard shortcut using pyautogui. If your browser window was focused, this should have opened a new tab.\\n\\nIf you want to automate more browser actions or control a different application, let me know your goal!'}]\n"
+      "[{'role': 'assistant', 'type': 'message', 'content': 'I am a helpful AI assistant designed to answer your questions, solve problems using mathematics, and provide guidance and support. Let me know how I can assist you today!'}]\n"
      ]
     }
    ],
@@ -68,153 +41,117 @@
     "interpreter.llm.api_base = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
     "interpreter.llm.api_version = os.getenv(\"AZURE_OPENAI_API_VERSION\")\n",
     "interpreter.auto_run = True\n",
+    "interpreter.system_message = \"You are a helpful assistant, who use maths to answer questions.\"\n",
     "\n",
-    "output = interpreter.chat(\"using pyautogui, press ctrl + t to open a new tab in the browser\")\n",
+    "output = interpreter.chat(\"who are you?\")\n",
     "\n",
     "print(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c1932be1",
+   "execution_count": null,
+   "id": "7eac7309",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from autogen import AssistantAgent, UserProxyAgent\n",
-    "\n",
-    "# Azure OpenAI configuration\n",
-    "azure_config = {\n",
-    "    \"model\": \"gpt-4.1\",  # use deployment name, not model name\n",
-    "    \"api_key\": os.getenv(\"AZURE_OPENAI_API_KEY\"),\n",
-    "    \"api_type\": \"azure\",\n",
-    "    \"base_url\": os.getenv(\"AZURE_OPENAI_ENDPOINT\"),\n",
-    "    \"api_version\": os.getenv(\"AZURE_OPENAI_API_VERSION\"),\n",
-    "}\n",
-    "\n",
-    "# Create an assistant agent using Azure\n",
-    "# assistant = AssistantAgent(\n",
-    "#     name=\"azure_agent\",\n",
-    "#     llm_config=azure_config,\n",
-    "# )\n",
-    "\n",
-    "# # Create a user proxy agent\n",
-    "# user = UserProxyAgent(name=\"user\", code_execution_config={\"use_docker\": False})\n",
-    "\n",
-    "# # Start a conversation\n",
-    "# user.initiate_chat(assistant, message=\"Write a Python function that sorts a list of numbers.\")"
+    "message_with_image = [\n",
+    "        {\"role\": \"user\", \"type\": \"message\", \"content\": \"Describe this image and then, using pyautogui, press ctrl + t to open a new tab in the browser.\"},\n",
+    "        {\"role\": \"user\", \"type\": \"image\", \"format\": \"path\", \"content\": image_path}\n",
+    "    ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "40122de7",
+   "execution_count": 7,
+   "id": "21dc58c0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[33mExecutor\u001b[0m (to chat_manager):\n",
-      "\n",
-      "Create a python script that find fibonacci numbers recursively and print the result.\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[32m\n",
-      "Next speaker: Coder\n",
-      "\u001b[0m\n",
-      "\u001b[33mCoder\u001b[0m (to chat_manager):\n",
-      "\n",
-      "Certainly! Below is a Python script that finds the n-th Fibonacci number recursively and prints the result. It also includes a main section that prompts the user for input:\n",
-      "\n",
-      "```python\n",
-      "def fibonacci(n):\n",
-      "    \"\"\"Return the nth Fibonacci number using recursion.\"\"\"\n",
-      "    if n <= 0:\n",
-      "        return 0\n",
-      "    elif n == 1:\n",
-      "        return 1\n",
-      "    else:\n",
-      "        return fibonacci(n-1) + fibonacci(n-2)\n",
-      "\n",
-      "if __name__ == \"__main__\":\n",
-      "    n = int(input(\"Enter the position (n) for Fibonacci number: \"))\n",
-      "    result = fibonacci(n)\n",
-      "    print(f\"Fibonacci number at position {n} is: {result}\")\n",
-      "```\n",
-      "\n",
-      "**Usage Example**:\n",
-      "```\n",
-      "Enter the position (n) for Fibonacci number: 7\n",
-      "Fibonacci number at position 7 is: 13\n",
-      "```\n",
-      "\n",
-      "**Notes**:\n",
-      "- The sequence is: 0, 1, 1, 2, 3, 5, 8, 13, ...\n",
-      "- The recursion in this implementation is simple but not efficient for large values of n. For large `n`, a memoization approach is recommended.\n",
-      "- The function returns `0` for n <= 0 as per a common convention; modify this logic if you need a different Fibonacci base case.\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[32m\n",
-      "Next speaker: Executor\n",
-      "\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> EXECUTING CODE BLOCK 0 (inferred language is python)...\u001b[0m\n"
+      "usage: ipykernel_launcher.py [-h] [--out OUT] [--region LEFT TOP WIDTH HEIGHT]\n",
+      "ipykernel_launcher.py: error: unrecognized arguments: --f=c:\\Users\\sathish\\AppData\\Roaming\\jupyter\\runtime\\kernel-v3e054dfdb18a3a7b7d9753810a674c0fd16e96827.json\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
      ]
     }
    ],
    "source": [
-    "from autogen import AssistantAgent, UserProxyAgent, GroupChat, GroupChatManager\n",
+    "import os\n",
+    "import argparse\n",
+    "from datetime import datetime\n",
+    "from typing import Optional, Tuple\n",
     "\n",
-    "# Create specialized agents\n",
-    "planner = AssistantAgent(\n",
-    "    name=\"Planner\",\n",
-    "    system_message=\"You are a planning assistant. Create step-by-step plans for complex tasks.\",\n",
-    "    llm_config=azure_config\n",
-    ")\n",
+    "# prefer mss (fast) but fallback to Pillow if unavailable\n",
+    "try:\n",
+    "    import mss\n",
+    "    import mss.tools\n",
+    "    _HAS_MSS = True\n",
+    "except Exception:\n",
+    "    _HAS_MSS = False\n",
+    "    try:\n",
+    "        from PIL import ImageGrab  # pillow fallback\n",
+    "    except Exception:\n",
+    "        ImageGrab = None\n",
     "\n",
-    "coder = AssistantAgent(\n",
-    "    name=\"Coder\", \n",
-    "    system_message=\"You are a Python coding expert. Write and debug code based on plans.\",\n",
-    "    llm_config= azure_config\n",
-    ")\n",
+    "def capture_screenshot(save_path: Optional[str] = None, region: Optional[Tuple[int, int, int, int]] = None, return_bytes: bool = False):\n",
+    "    \"\"\"\n",
+    "    Capture a screenshot.\n",
+    "    - save_path: path to save PNG. If None, saves to cwd with timestamp.\n",
+    "    - region: (left, top, width, height) or None for full screen.\n",
+    "    - return_bytes: if True, returns PNG bytes; otherwise returns the save_path string.\n",
+    "    This function avoids using Python 3.10+ union-type syntax so it's\n",
+    "    compatible with older Python versions.\n",
+    "    \"\"\"\n",
+    "    if save_path is None:\n",
+    "        ts = datetime.utcnow().strftime(\"%Y%m%dT%H%M%SZ\")\n",
+    "        save_path = os.path.join(os.getcwd(), f\"screenshot_{ts}.png\")\n",
     "\n",
-    "executor = UserProxyAgent(\n",
-    "    name=\"Executor\",\n",
-    "    system_message=\"You execute code and report results.\",\n",
-    "    human_input_mode=\"NEVER\",\n",
-    "    code_execution_config={\"use_docker\": False}\n",
-    ")\n",
+    "    if _HAS_MSS:\n",
+    "        with mss.mss() as s:\n",
+    "            monitor = s.monitors[1] if region is None else {\n",
+    "                \"left\": int(region[0]), \"top\": int(region[1]),\n",
+    "                \"width\": int(region[2]), \"height\": int(region[3])\n",
+    "            }\n",
+    "            s_img = s.grab(monitor)\n",
+    "            mss.tools.to_png(s_img.rgb, s_img.size, output=save_path)\n",
+    "    else:\n",
+    "        # Pillow fallback (Windows/macOS; on some Linux configs may need X server)\n",
+    "        if ImageGrab is None:\n",
+    "            raise RuntimeError(\"No screenshot backend available: install 'mss' or 'pillow'\")\n",
+    "        bbox = None if region is None else (int(region[0]), int(region[1]), int(region[0]) + int(region[2]), int(region[1]) + int(region[3]))\n",
+    "        img = ImageGrab.grab(bbox=bbox)\n",
+    "        img.save(save_path, \"PNG\")\n",
     "\n",
-    "# Create and manage group chat\n",
-    "groupchat = GroupChat(\n",
-    "    agents=[planner, coder, executor], \n",
-    "    messages=[], \n",
-    "    max_round=6\n",
-    ")\n",
+    "    if return_bytes:\n",
+    "        with open(save_path, \"rb\") as f:\n",
+    "            return f.read()\n",
+    "    return save_path\n",
     "\n",
-    "manager = GroupChatManager(groupchat=groupchat, llm_config=azure_config)\n",
+    "if __name__ == \"__main__\":\n",
+    "    p = argparse.ArgumentParser(description=\"Take a screenshot and save as PNG.\")\n",
+    "    p.add_argument(\"--out\", \"-o\", help=\"Output file path (defaults to cwd with timestamp).\")\n",
+    "    p.add_argument(\"--region\", \"-r\", nargs=4, type=int, metavar=(\"LEFT\", \"TOP\", \"WIDTH\", \"HEIGHT\"),\n",
+    "                   help=\"Region to capture: left top width height\")\n",
+    "    args = p.parse_args()\n",
     "\n",
-    "# Start the collaborative task\n",
-    "executor.initiate_chat(\n",
-    "    manager,\n",
-    "    message=\"Create a python script that find fibonacci numbers recursively and print the result.\"\n",
-    ")"
+    "    path = capture_screenshot(save_path=args.out, region=tuple(args.region) if args.region else None)\n",
+    "    print(path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16185c8e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21dc58c0",
+   "id": "37e06d80",
    "metadata": {},
    "outputs": [],
    "source": []
